<resources>
    <string name="app_name">キャッチボール君</string>
    <string name="point_pink">30 point</string>
    <string name="point_orange">10 point</string>
    <string name="Game_Over">Game Over</string>
    <string name="btn_start">START</string>
    <string name="tap_to_start">タップしてスタート</string>
    <string name="score">Score : %d</string>
    <string name="game_over">GAME OVER</string>
    <string name="high_score">High Score : %d</string>
    <string name="try_again">もう一度プレイ</string>
    <string name="result_score">Result %d</string>
    <string name="point_bird">100 point</string>
    <string name="clear">Clear!!!</string>



    <!-- ステージセレクト-->
    <string name="stage_select">ステージ選択に戻る</string>
    <string name="st1">ステージ1</string>
    <string name="st2">ステージ2</string>
    <string name="st3">ステージ3</string>
</resources>