<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,RtlSymmetry , ContentDescription" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/st1"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical"/>


        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/startLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_start"
            android:textSize="20sp"
            android:layout_gravity="center"   />

        <ImageView
            android:id="@+id/box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/box"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/orange"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/orange"/>


        <ImageView
            android:id="@+id/pink"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/pink"/>

        <ImageView
            android:id="@+id/black"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/black"/>

        <ImageView
            android:id="@+id/bird"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bird"/>



    </FrameLayout>



</LinearLayout>